@@ -209,7 +209,7 @@ L["lime_advanced_04"] = "Vehicle Tracking"
 L["lime_advanced_desc_04"] = "To modify vehicle tracking, you must manually edit the Lua."
 L["lime_advanced_05"] = "|cffff6600Ignore all warnings|r"
 L["lime_advanced_desc_05"] = "Ignore the compatibility warning and force the limited functionality to work. This is a very dangerous feature, so do not check if you do not know the feature."
-L["lime_advanced_06"] = "|cffff6600Displaying a friendly nameplate will disable Lime's tooltip display.\n\nIf you set all warnings to be ignored, \nyou can reuse the tooltip functionality,\nbut there is a high probability of a serious crash.|r"
+L["lime_advanced_06"] = "|cffff6600Displaying a friendly nameplate will disable Lime's tooltip display. If you set all warnings to be ignored, you can reuse the tooltip functionality, but there is a high probability of a serious crash.|r"
 L["lime_advanced_07"] = "Allow ALT Dragging"
 L["lime_advanced_desc_07"] = "When locked, you can use drag the raid frames while pressing the ALT key."
 
@@ -560,7 +560,7 @@ L["lime_func_buff_3"] = "Sets the size of the buff icon."
 L["lime_func_buff_4"] = "Do not show"
 L["lime_func_buff_5"] = "Indicates when no buff"
 L["lime_func_buff_6"] = "Indicates when buff"
-L["lime_func_buff_6"] = "Set the buff indicator."
+L["lime_func_buff_7"] = "Set the buff indicator."
 
 L["lime_func_button_17"] = "Disable"
 L["lime_func_button_18"] = "My Buffs"
