@@ -206,7 +206,7 @@ L["lime_advanced_04"] = "탑승물 추적 여부"
 L["lime_advanced_desc_04"] = "탑승물 추적 여부를 수정하려면 LUA를 직접 편집해야 합니다."
 L["lime_advanced_05"] = "|cffff6600모든 경고 무시|r"
 L["lime_advanced_desc_05"] = "호환성 경고를 무시하고 제한된 기능을 강제로 작동하도록 합니다. 이 기능은 상당히 위험한 기능이오니, 해당 기능을 잘 모른다면 체크를 하지 마세요."
-L["lime_advanced_06"] = "|cffff6600아군 이름표를 표시하면 Lime의 툴팁 표시 기능이 비활성화됩니다.\n\n모든 경고를 무시하도록 설정하면 툴팁 기능을 다시 사용할 수 있으나\n심각한 충돌이 발생할 가능성이 높습니다.|r"
+L["lime_advanced_06"] = "|cffff6600아군 이름표를 표시하면 Lime의 툴팁 표시 기능이 비활성화됩니다. 모든 경고를 무시하도록 설정하면 툴팁 기능을 다시 사용할 수 있으나 심각한 충돌이 발생할 가능성이 높습니다.|r"
 L["lime_advanced_07"] = "ALT 드래그 허용"
 L["lime_advanced_desc_07"] = "잠금 상태일 때 ALT를 이용하여 공격대 프레임을 드래그할 수 있습니다."
 
@@ -557,7 +557,7 @@ L["lime_func_buff_3"] = "버프 확인 아이콘의 크기를 설정합니다."
 L["lime_func_buff_4"] = "표시 안함"
 L["lime_func_buff_5"] = "버프가 없을 때 표시"
 L["lime_func_buff_6"] = "버프가 있을 때 표시"
-L["lime_func_buff_6"] = "버프의 표시 여부를 설정합니다."
+L["lime_func_buff_7"] = "버프의 표시 여부를 설정합니다."
 
 L["lime_func_button_17"] = "사용 안함"
 L["lime_func_button_18"] = "내가 시전한 강화 효과"
